{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 37,
  "lineage": "c75bce01-dbfe-030b-5f9f-d9723714b70d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07728cccf10589b2c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-027f17fe87ff32330",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027f17fe87ff32330",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03696fbb052960a2d",
            "private_dns": "ip-141-22-1-36.eu-west-1.compute.internal",
            "private_ip": "141.22.1.36",
            "public_dns": "ec2-34-240-173-231.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.173.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9330fb9326d5279",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d146e14d7d7f6f3e",
            "tags": {
              "Name": "Eng67.Andrew.Terraform.EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2381231c64482ae"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.pub",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-00de614adf8960fdc",
            "id": "igw-00de614adf8960fdc",
            "owner_id": "135928476890",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030c838f19f653819",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "141.22.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00de614adf8960fdc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng67.Andrew.Terraform.Priv"
            },
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06309d2f7315f1664",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00de614adf8960fdc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng67.Andrew.Terraform.Pub"
            },
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0e2381231c64482ae",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2381231c64482ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "77.98.125.189/32"
                ],
                "description": "SSH from port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng67.Andrew.Public-SG",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng67.Andrew.Public-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-003d3828bb9af5cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "141.22.2.0/24",
            "id": "subnet-003d3828bb9af5cc0",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Andrew.Terraform.Subnet-Private"
            },
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0d146e14d7d7f6f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "141.22.1.0/24",
            "id": "subnet-0d146e14d7d7f6f3e",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Andrew.Terraform.Subnet-Public"
            },
            "vpc_id": "vpc-0b875dbf9c46a9b27"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0b875dbf9c46a9b27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "141.22.0.0/16",
            "default_network_acl_id": "acl-06cfefd36c3ad4e65",
            "default_route_table_id": "rtb-07214ab90e1b4734e",
            "default_security_group_id": "sg-02f29f56d6b204949",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b875dbf9c46a9b27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07214ab90e1b4734e",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng67.Andrew.Terraform.VPC"
            }
          }
        }
      ]
    }
  ]
}